--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.css
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.css
@@ -1,17 +1,22 @@
 nav{
-    padding:0px;
-    
+  padding:0px;
+  
+}
+.container-fluid{
+  padding:10px;
+}
+button {
+    background-color: black; 
+    color: white; 
   }
-  .container-fluid{
-    padding:10px;
+  
+button:hover {
+    background-color: #825d05;
+    color: white;
   }
-  button {
-      background-color: black; 
-      color: white; 
-    }
-    
-  button:hover {
-      background-color: #825d05;
-      color: white;
-    }
-    
+  select{
+    background-color: rgb(243, 198, 49);
+    width: 80px;
+    height: 30px;
+    margin-right: 15px;
+  }
