--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
@@ -25,6 +25,11 @@
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ul>
+      <select #type (change)="onselected(type.value)">
+        <option default>Title</option>
+        <option>Category</option>
+        <option>Publisher</option>
+      </select>
       <form class="d-flex"  #regForm='ngForm' name="myForm" #myForm="ngForm" (ngSubmit)="saveQueryToSessionStorage(myForm)">
         <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="inputSearch"  [(ngModel)]="book">
         <button class="btn btn-outline-success" type="submit"  [disabled]="!regForm.valid">Search</button>
