--- a/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
@@ -5,6 +5,7 @@
     </h3>
    
     <ul class="tilesWrap">
+        <h1 style="color: azure;">{{message}}</h1>
         <li *ngFor="let b of books,index as i">
             <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
             <h3>{{b.bookTitle}}</h3>
@@ -17,7 +18,7 @@
             <p><span>Price - </span>
                 {{b.bookPrice | currency:'EUR'}}
             </p>
-            <button type="button" class="btn btn-success">Remove</button>
+            <button type="button" class="btn btn-success" (click)="alertMethod()">Read</button>
         </li>
     </ul>
   </div>
