--- a/Client-side/DigitalBook/src/app/Component/guest-navbar/guest-navbar.component.css
+++ b/Client-side/DigitalBook/src/app/Component/guest-navbar/guest-navbar.component.css
@@ -14,4 +14,9 @@ nav{
       background-color: #825d05;
       color: white;
     }
-    
+    select{
+      background-color: rgb(243, 198, 49);
+      width: 80px;
+      height: 30px;
+      margin-right: 15px;
+    }
