--- a/Client-side/DigitalBook/src/app/Component/author-home/author-home.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-home/author-home.component.html
@@ -8,7 +8,7 @@
         <li *ngFor="let b of books,index as i">
             <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
             <h3>{{b.bookTitle}}</h3>
-            <p><span>Author - </span>
+            <p><span>Publisher-</span>
                 {{b.bookPublisher}}
             </p>
             <p><span>Genre - </span>
