--- a/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
@@ -18,7 +18,7 @@
             <p><span>Price - </span>
                 {{b.bookPrice | currency:'EUR'}}
             </p>
-            <button type="button" class="btn btn-success" (click)="alertMethod()">Read</button>
+            <button type="button" class="btn btn-success" (click)="subscribeMethod(b)">Subscribe</button>
         </li>
     </ul>
   </div>
