--- a/Client-side/DigitalBook/src/app/Component/reader-search/reader-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-search/reader-search.component.html
@@ -6,6 +6,7 @@
    
     <ul class="tilesWrap">
         <h1 style="color: azure;">{{message}}</h1>
+        <h1 style="color: rgb(252, 156, 11);">{{message1}}</h1>
         <li *ngFor="let b of books,index as i">
             <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
             <h3>{{b.bookTitle}}</h3>
@@ -18,7 +19,7 @@
             <p><span>Publisher- </span>
                 {{b.bookPublisher}}
             </p>
-            <button type="button" class="btn btn-success" (click)="alertMethod()">Read</button>
+            <button type="button" class="btn btn-success" (click)="subscribeMethod(b)">Subscribe</button>
         </li>
     </ul>
   </div>
